2001-06-18  Karl Eichwalder  <ke@suse.de>

	* msgcomm.c (long_options): Add '--unique' option as documented
	within --help output.

2001-06-12  Bruno Haible  <haible@clisp.cons.org>

	* xgettext.c (extension_to_language): Recognize "*.hh" as being C++.
	Reported by Felix Natter.

2001-06-10  Bruno Haible  <haible@clisp.cons.org>

	* msgcmp.c (main): Set gram_max_allowed_errors to UINT_MAX, as in
	msgmerge.c.

2001-06-10  Bruno Haible  <haible@clisp.cons.org>

	* message.c (message_alloc): Cast xmalloc return value.
	(message_list_alloc): Likewise.
	(message_list_list_alloc): Likewise.
	(msgdomain_alloc): Likewise.
	(msgdomain_list_alloc): Likewise.
	* msgunfmt.c (string32): Likewise.
	* po.c (po_alloc): Likewise.
	* str-list.c (string_list_concat): Likewise.
	(string_list_join): Likewise.

2001-06-10  Bruno Haible  <haible@clisp.cons.org>

	* message.h (message_ty): New field 'tmp'.
	(message_predicate_ty): New type.
	(message_list_remove_if_not): New declaration.
	* message.c (message_list_delete_nth): Comment out.
	(message_list_remove_if_not): New function.
	* msgl-charset.h: New file.
	* msgl-charset.c: New file.
	* msgl-iconv.h: New file.
	* msgl-iconv.c: New file.
	* msgcat.c: New file.
	* msgconv.c: New file.
	* msgen.c: New file.
	* msggrep.c: New file.
	* msgsed.c: New file.
	* msgcomm.c (default_domain, output_dir): Remove variables.
	(long_options): Remove --default-domain and --output-dir. Add
	--output-file.
	(main): Don't accept -a, -C, -d, -k, -l, -L, -m, -M, -p, -T, -x.
	Use output_file instead of complexly computed file_name.
	Use O(n) loop instead of O(n^2) loop for removing messages.
	(usage): Don't document --default-domain and --output-dir.
	(is_message_selected): New function.
	* Makefile.am (bin_PROGRAMS): Add msgcat, msgconv, msgen, msggrep,
	msgsed.
	(noinst_HEADERS): Add msgl-charset.h, msgl-iconv.h.
	(msgcat_SOURCES, msgconv_SOURCES, msgen_SOURCES, msggrep_SOURCES,
	msgsed_SOURCES): New variables.