@@ -1,3 +1,7 @@
+2001-06-25  Bruno Haible  <haible@clisp.cons.org>
+
+	* msggrep.c (usage): Explain the pattern syntax.
+
 2001-06-18  Karl Eichwalder  <ke@suse.de>
 
 	* msgcomm.c (long_options): Add '--unique' option as documented
